small spacing fixes

--- a/css/main.scss
+++ b/css/main.scss
@@ -1049,7 +1049,7 @@ section{
         }
     }
     h4{
-        margin: 15px 0px 4px 0px;
+        margin: 16px 0px 4px 0px;
         font-size: 14px;
         line-height: 16px;
         font-family: 'alrightBold';
